Include database for caching Spotify/Youtube tracks (#78)